# AudioAnalyzer

./: .gitignore  .gitmodules  AudioAnalyzer.jucer  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Generate-AndroidStudioProject.ps1  HTDemucs_README.md  TextFile1.txt  Untitled-1.cpp  VectorCoroutine.h  VectorGenerator.h  Version_Number_Set.cmd  cpp_python.md
.github/: copilot-instructions.md
Android_Special/: ToRestoreAdaptiveAndroidIcons.txt  deployment_cert.der  flavorDimensions.txt  keystore.jks  my_Custom_Manifest_XML_Content.xml  private_key.pepk  upload_cert.der  upload_certificate.pem  xcopyres.bat
Android_Special/cmake_stuff/: build.gradle
Android_Special/cmake_stuff/Android/app/: build.gradle
AudioAnalyzer.xcworkspace/: contents.xcworkspacedata
Builds/Android/: build.gradle  gradle.properties  local.properties  settings.gradle
Builds/Android/app/: CMakeLists.txt  build.gradle
Builds/CodeBlocksLinux/: AudioAnalyzer.cbp  resources.rc
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: App.entitlements  Icon.icns  Info-App.plist
Builds/MacOSX/AudioAnalyzer.xcodeproj/: project.pbxproj
Builds/VisualStudio2022/: AudioAnalyzer.sln  AudioAnalyzer_App.vcxproj  AudioAnalyzer_App.vcxproj.filters  MajorMinorBuildRevisionNumbers.xml  drawLog.txt  readAndFFTLog.txt  resources.rc
Builds/cmake/: CMakeCache.txt
Builds/iOS/: Icon.icns  Info-App.plist
Builds/iOS/AudioAnalyzer.xcodeproj/: project.pbxproj
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h
JuceLibraryCode/modules/juce_audio_basics/: juce_audio_basics.h
JuceLibraryCode/modules/juce_audio_basics/buffers/: juce_AudioSampleBuffer.h  juce_FloatVectorOperations.h
JuceLibraryCode/modules/juce_audio_basics/midi/: juce_MidiMessage.cpp
JuceLibraryCode/modules/juce_audio_devices/: juce_audio_devices.cpp  juce_audio_devices.h
JuceLibraryCode/modules/juce_audio_devices/audio_io/: juce_AudioDeviceManager.cpp  juce_AudioIODevice.cpp  juce_AudioIODevice.h
JuceLibraryCode/modules/juce_audio_devices/midi_io/: juce_MidiDevices.h
JuceLibraryCode/modules/juce_audio_devices/native/: juce_Audio_android.cpp  juce_Audio_ios.cpp  juce_Audio_ios.h  juce_CoreAudio_mac.cpp  juce_CoreAudio_mac.cpp.orig  juce_Oboe_android.cpp  juce_mac_CoreAudio.cpp.LOCAL.cpp.orig
JuceLibraryCode/modules/juce_audio_formats/: juce_audio_formats.h
JuceLibraryCode/modules/juce_audio_processors/: juce_audio_processors.h
JuceLibraryCode/modules/juce_audio_processors/format_types/: juce_AU_Shared.h  juce_VST3Common.h  juce_VST3Headers.h  juce_VST3PluginFormat.cpp
JuceLibraryCode/modules/juce_audio_processors/processors/: juce_AudioProcessor.h  juce_AudioProcessorGraph.cpp
JuceLibraryCode/modules/juce_audio_utils/: juce_audio_utils.h
JuceLibraryCode/modules/juce_core/: juce_core.cpp  juce_core.h
JuceLibraryCode/modules/juce_data_structures/: juce_data_structures.h
JuceLibraryCode/modules/juce_dsp/: juce_dsp.h
JuceLibraryCode/modules/juce_events/: juce_events.h
JuceLibraryCode/modules/juce_graphics/: juce_graphics.cpp  juce_graphics.h  juce_graphics_Harfbuzz.cpp
JuceLibraryCode/modules/juce_gui_basics/: juce_gui_basics.cpp  juce_gui_basics.h
JuceLibraryCode/modules/juce_gui_extra/: juce_gui_extra.h
Microsoft_Store_div/WapProj/: Package.appxmanifest  WapProj.wapproj
Source/: AudioAnalyzerGlobalEnums.h  AudioLiveScrollingDisplay.h  AudioPlaybackModule.h  AudioRecorderModule.h  AudioSettingsModule.cpp  AudioSettingsModule.h  FFTCtrl.cpp  FFTCtrl.h  FFTModule.cpp  FFTModule.h  GuitarExtractor.h  Main.cpp  MainComponent.cpp  MainComponent.h  NOTCH_50_60_Hz_filter_Coeffs.h  NotchFilter.cpp  NotchFilter.h  ONNXModel.cpp  ONNXModel.h  PlotModule.cpp  PlotModule.h  SineSynth.h  SineSynthModule.cpp  SineSynthModule.h  SoundProcessorModule.cpp  SoundProcessorModule.h  SoundSynthAndAnalyzeModule.cpp  SoundSynthAndAnalyzeModule.h  SpectrogramComponent.cpp  SpectrogramComponent.cpp.orig  SpectrogramComponent.h  Utilities.h  cmp_datamodels.h  cmp_downsampler.cpp  cmp_downsampler.h  cmp_frame.cpp  cmp_frame.h  cmp_graph_area.cpp  cmp_graph_area.h  cmp_graph_line.cpp  (+29 more)
Source/rnnoise_source/: denoise.c  rnn_reader.c  rnnoise.h
div/: 50Hz marker.cpp  CP1_SpectrogramComponent.h  CP2_SpectrogramComponent.h  CP_AudioProcessor.h  CP_NotchFilter.h  CP_NotchFilter2.h  CP_SR_FFTModule.h  CP_SpectrogramComponent.h  CP_Task.h  CP_int.cpp  CP_promise_type.h  CallBackToParent.h  CustomAudioSource.h  FFTModule.h  MyAudioCallback.h  NOTCH_50_60_Hz_filter_Coeffs.h  Reader.h  Source1.cpp  SpectrogramComponent.h  TimeSlice_SpectrogramComponent.h  YLimTimer.h  audio_processing_bindings.cpp  audio_processing_bindings.h  juce_Point.h  promise_type.h  void.cpp
div/Source/: AudioPlaybackModule.h  FFTModule.cpp  FFTModule.h  SpectrogramComponent.cpp  SpectrogramComponent.h
docs/: ANDROID_STUDIO_CMAKE_IMPORT.md
iOS_Plist/: Info-App.plist  iOS_Projucer_Plist.plist
minimalOnnx/minimalOnnx/: minimalOnnx.cpp  minimalOnnx.vcxproj  minimalOnnx.vcxproj.filters
onnxThings/: Export_the_Model_to_ONNX.py  Export_the_Model_to_ONNX_2.py  convert_onnx.py  keys.py  model_config.py  post_stft_model.onnx  post_stft_model_v15.onnx  preprocess_model.onnx  preprocess_model_v15.onnx  pyres.txt  test.py  tst.py
pythonThings/: audio_processing_bindings.cpp  audio_processing_bindings.h  python312.lib  python37.lib
rnnoise/: dr_wav.h  rnnoise.lib
rnnoise_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dump_features.vcxproj  dump_features.vcxproj.filters  dump_weights_blob.vcxproj  dump_weights_blob.vcxproj.filters  rnnoise.sln  rnnoise.vcxproj  rnnoise.vcxproj.filters  rnnoise_demo.vcxproj  rnnoise_demo.vcxproj.filters  rnnoise_smoke.vcxproj  rnnoise_smoke.vcxproj.filters
snap/: snapcraft.yaml
snap/gui/: audioanalyzer.desktop  guitarfinetune.desktop
xcodeprojs_with_rnnoise/iOS/AudioAnalyzer.xcodeproj/: project.pbxproj
xcodeprojs_with_rnnoise/macOS/AudioAnalyzer.xcodeproj/: project.pbxproj
(+75 files in other folders)
